# OOP_Allocator

./: CMakeLists.txt  data.txt  main.cpp  test.cpp
include/: Allocator.h  DataTypes.h  Fault.h  h_allocator.h  hlist.h  hstring.h  xallocator.h
source/: Allocator.cpp  Fault.cpp  h_allocator.cpp  hlist.cpp  hstring.cpp  xallocator.cpp
